# Manga-Scrapper

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: dev-pypi.yml  pypi.yml  testing.yml
enma/: _version.py
