[project]
name = "enma"
version = "2.4.4"
description = "Enma is a Python library designed to fetch manga and doujinshi data from many sources."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9.0"
authors = [
    { name = "AlexandreSenpai", email = "alexandrebsramos@hotmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
"Github" = "https://github.com/AlexandreSenpai/Enma"

[project.optional-dependencies]
google_drive = [
  "google-api-python-client>=2.0.0",
  "google-auth-httplib2>=0.1.0",
  "google-auth-oauthlib>=0.4.0",
]

dependencies = [
    "beautifulsoup4==4.12.3",
    "expiringdict==1.2.2",
    "pydantic==2.8.2",
    "requests==2.32.3",
]

[dependency-groups]
dev = [
    "pytest-cov==4.1.0",
    "pytest==8.3.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "tests/",
  "requirements.txt",
  "uv.lock",
  ".gitignore",
  ".python-version",
  "docs/",
  ".vscode/",
  ".github/",
  "README.md",
  "MANIFEST.in"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "enma/_version.py"

[tool.coverage.run]
omit = [
  "*/interfaces/*",
  "*/tests/*",
  "enma/__init__.py"
]